Fixs categories name too long

--- a/src/scss/components/directory-menu/filter-menu/_subcategorie-option-item.scss
+++ b/src/scss/components/directory-menu/filter-menu/_subcategorie-option-item.scss
@@ -2,7 +2,7 @@
 * @Author: Sebastian Castro
 * @Date:   2017-03-02 08:57:20
 * @Last Modified by:   Sebastian Castro
-* @Last Modified time: 2017-12-29 17:45:31
+* @Last Modified time: 2018-05-13 15:49:43
 */
 .subcategorie-option-item
 {
@@ -19,19 +19,15 @@
   { 
   	.gogo-icon-name-wrapper 
 		{
-    	.arrow-after
-    	{
-    		margin-bottom: -3px;
-	    	//border-color: #545454 transparent transparent transparent; 
-    	}    	
-
-	    &:hover .arrow-after { margin-bottom: -5px; /*border-color: #de5a5f transparent transparent transparent;*/ }
-	  }
+      &:hover .arrow-after, .arrow-after { margin-bottom: -4px; }	
+    }
   }
 
 	.gogo-icon-name-wrapper 
 	{
     margin-right: 3rem;
+
+    .option-name { position: absolute; }
 
     &:hover
     {
@@ -39,7 +35,6 @@
 			{ 
 				border: solid 6px;
 	    	margin-bottom: 1px;
-	    	//border-color:  transparent transparent #de5a5f transparent; 
 	    }
     }
 	}
@@ -50,9 +45,7 @@
     margin-left: 1rem;
     border: solid 5px;
    	margin-bottom: 1px;
-    //border-color:  transparent transparent #545454 transparent ;
   }
-
 
 	.icon
 	{
@@ -109,6 +102,10 @@
     right: 0;
     top: 0;
     bottom: 0;
+    background: -moz-linear-gradient(left, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.48) 25%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(255,255,255,0.3) 0%,rgba(255,255,255,0.48) 25%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(255,255,255,0.3) 0%,rgba(255,255,255,0.48) 25%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4dffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
 
 		.checkbox-container
 		{
@@ -121,7 +118,12 @@
 	&:hover
 	{
 		background-color: $grey-light;
-		cursor: pointer;		
+		cursor: pointer;	
+
+    .checkbox-wrapper {
+      background: none;
+      background-color: transparent;
+    }	
 
     &:not(.option-collapsible)
     {
